# snatch

./: .gitignore  LICENSE  README.md  build-release.bat  build.bat  install_native_host.py  store-listing.md
.github/workflows/: build.yml  release.yml
companion/: package-lock.json  package.json
companion/src/: index.html  main.js  styles.css
companion/src-tauri/: Cargo.toml  tauri.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/icons/: icon.icns
companion/src-tauri/src/: db.rs  downloader.rs  lib.rs  main.rs  queue.rs  server.rs
daemon/: com.snatch.companion.json  db.py  download_queue.py  downloader.py  main.py  native_host.py
extension/: api.js  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
extension-mini/: background.js  manifest.json  popup.html  popup.js
